SERVER-71479 Merging chunks must not set `validAfter` to the current wall time