src/mongo/db/s/config/sharding_catalog_manager_merge_chunks_test.cpp
@@ -91,6 +91,11 @@ TEST_F(MergeChunkTest, MergeExistingChunksCorrectlyShouldSucceed) {
     auto chunk2(chunk);
     chunk2.setName(OID::gen());
 
+    // set histories
+    chunk.setHistory({ChunkHistory{Timestamp{100, 0}, _shardId}});
+    chunk2.setHistory({ChunkHistory{Timestamp{200, 0}, _shardId}});
+
+    // set boundaries
     auto chunkMin = BSON("a" << 1);
     auto chunkBound = BSON("a" << 5);
     auto chunkMax = BSON("a" << 10);
@@ -103,8 +108,6 @@ TEST_F(MergeChunkTest, MergeExistingChunksCorrectlyShouldSucceed) {
 
     setupCollection(_nss1, _keyPattern, {chunk, chunk2});
 
-    Timestamp validAfter{100, 0};
-
     ChunkRange rangeToBeMerged(chunk.getMin(), chunk2.getMax());
 
     auto versions = assertGet(ShardingCatalogManager::get(operationContext())
@@ -114,8 +117,7 @@ TEST_F(MergeChunkTest, MergeExistingChunksCorrectlyShouldSucceed) {
                                                       collTimestamp,
                                                       collUuid,
                                                       rangeToBeMerged,
-                                                      _shardId,
-                                                      validAfter));
+                                                      _shardId));
 
     auto collVersion = versions.collectionVersion;
     auto shardVersion = versions.shardVersion;
@@ -156,7 +158,8 @@ TEST_F(MergeChunkTest, MergeExistingChunksCorrectlyShouldSucceed) {
 
     // Make sure history is there
     ASSERT_EQ(1UL, mergedChunk.getHistory().size());
-    ASSERT_EQ(validAfter, mergedChunk.getHistory().front().getValidAfter());
+    ASSERT_EQ(chunk2.getHistory().front().getValidAfter(),
+              mergedChunk.getHistory().front().getValidAfter());
 }
 
 TEST_F(MergeChunkTest, MergeSeveralChunksCorrectlyShouldSucceed) {
@@ -177,6 +180,11 @@ TEST_F(MergeChunkTest, MergeSeveralChunksCorrectlyShouldSucceed) {
     chunk2.setName(OID::gen());
     chunk3.setName(OID::gen());
 
+    // set histories
+    chunk.setHistory({ChunkHistory{Timestamp{100, 10}, _shardId}});
+    chunk2.setHistory({ChunkHistory{Timestamp{200, 1}, _shardId}});
+    chunk3.setHistory({ChunkHistory{Timestamp{50, 0}, _shardId}});
+
     auto chunkMin = BSON("a" << 1);
     auto chunkBound = BSON("a" << 5);
     auto chunkBound2 = BSON("a" << 7);
@@ -194,8 +202,6 @@ TEST_F(MergeChunkTest, MergeSeveralChunksCorrectlyShouldSucceed) {
     setupCollection(_nss1, _keyPattern, {chunk, chunk2, chunk3});
     ChunkRange rangeToBeMerged(chunk.getMin(), chunk3.getMax());
 
-    Timestamp validAfter{100, 0};
-
     uassertStatusOK(ShardingCatalogManager::get(operationContext())
                         ->commitChunksMerge(operationContext(),
                                             _nss1,
@@ -203,8 +209,7 @@ TEST_F(MergeChunkTest, MergeSeveralChunksCorrectlyShouldSucceed) {
                                             collTimestamp,
                                             collUuid,
                                             rangeToBeMerged,
-                                            _shardId,
-                                            validAfter));
+                                            _shardId));
 
     const auto query BSON(ChunkType::collectionUUID() << collUuid);
     auto findResponse = uassertStatusOK(
@@ -235,7 +240,8 @@ TEST_F(MergeChunkTest, MergeSeveralChunksCorrectlyShouldSucceed) {
 
     // Make sure history is there
     ASSERT_EQ(1UL, mergedChunk.getHistory().size());
-    ASSERT_EQ(validAfter, mergedChunk.getHistory().front().getValidAfter());
+    ASSERT_EQ(chunk2.getHistory().front().getValidAfter(),
+              mergedChunk.getHistory().front().getValidAfter());
 }
 
 TEST_F(MergeChunkTest, NewMergeShouldClaimHighestVersion) {
@@ -255,6 +261,10 @@ TEST_F(MergeChunkTest, NewMergeShouldClaimHighestVersion) {
     // Construct chunk to be merged
     auto chunk2(chunk);
     chunk2.setName(OID::gen());
+
+    // set histories
+    chunk.setHistory({ChunkHistory{Timestamp{100, 0}, _shardId}});
+    chunk2.setHistory({ChunkHistory{Timestamp{200, 0}, _shardId}});
 
     auto chunkMin = BSON("a" << 1);
     auto chunkBound = BSON("a" << 5);
@@ -278,8 +288,6 @@ TEST_F(MergeChunkTest, NewMergeShouldClaimHighestVersion) {
 
     setupCollection(_nss1, _keyPattern, {chunk, chunk2, otherChunk});
 
-    Timestamp validAfter{100, 0};
-
     uassertStatusOK(ShardingCatalogManager::get(operationContext())
                         ->commitChunksMerge(operationContext(),
                                             _nss1,
@@ -287,8 +295,7 @@ TEST_F(MergeChunkTest, NewMergeShouldClaimHighestVersion) {
                                             collTimestamp,
                                             collUuid,
                                             rangeToBeMerged,
-                                            _shardId,
-                                            validAfter));
+                                            _shardId));
 
     const auto query = BSON(ChunkType::collectionUUID() << collUuid);
     auto findResponse = uassertStatusOK(
@@ -319,7 +326,8 @@ TEST_F(MergeChunkTest, NewMergeShouldClaimHighestVersion) {
 
     // Make sure history is there
     ASSERT_EQ(1UL, mergedChunk.getHistory().size());
-    ASSERT_EQ(validAfter, mergedChunk.getHistory().front().getValidAfter());
+    ASSERT_EQ(chunk2.getHistory().front().getValidAfter(),
+              mergedChunk.getHistory().front().getValidAfter());
 }
 
 TEST_F(MergeChunkTest, MergeLeavesOtherChunksAlone) {
@@ -338,6 +346,10 @@ TEST_F(MergeChunkTest, MergeLeavesOtherChunksAlone) {
     // Construct chunk to be merged
     auto chunk2(chunk);
     chunk2.setName(OID::gen());
+
+    // set histories
+    chunk.setHistory({ChunkHistory{Timestamp{100, 5}, shardId}});
+    chunk2.setHistory({ChunkHistory{Timestamp{200, 1}, shardId}});
 
     auto chunkMin = BSON("a" << 1);
     auto chunkBound = BSON("a" << 5);
@@ -361,7 +373,6 @@ TEST_F(MergeChunkTest, MergeLeavesOtherChunksAlone) {
 
     setupCollection(_nss1, _keyPattern, {chunk, chunk2, otherChunk});
 
-    Timestamp validAfter{1};
     uassertStatusOK(ShardingCatalogManager::get(operationContext())
                         ->commitChunksMerge(operationContext(),
                                             _nss1,
@@ -369,8 +380,7 @@ TEST_F(MergeChunkTest, MergeLeavesOtherChunksAlone) {
                                             collTimestamp,
                                             collUuid,
                                             rangeToBeMerged,
-                                            shardId,
-                                            validAfter));
+                                            shardId));
     const auto query = BSON(ChunkType::collectionUUID() << collUuid);
     auto findResponse = uassertStatusOK(
         getConfigShard()->exhaustiveFindOnConfig(operationContext(),
@@ -413,10 +423,15 @@ TEST_F(MergeChunkTest, NonExistingNamespace) {
     chunk.setCollectionUUID(UUID::gen());
 
     auto origVersion = ChunkVersion({collEpoch, collTimestamp}, {1, 0});
+    chunk.setShard(_shardId);
     chunk.setVersion(origVersion);
 
     // Construct chunk to be merged
     auto chunk2(chunk);
+
+    // set history
+    chunk.setHistory({ChunkHistory{Timestamp{100, 0}, _shardId}});
+    chunk2.setHistory({ChunkHistory{Timestamp{200, 0}, _shardId}});
 
     auto chunkMin = BSON("a" << 1);
     auto chunkBound = BSON("a" << 5);
@@ -432,8 +447,6 @@ TEST_F(MergeChunkTest, NonExistingNamespace) {
 
     setupCollection(_nss1, _keyPattern, {chunk, chunk2});
 
-    Timestamp validAfter{1};
-
     ASSERT_THROWS(ShardingCatalogManager::get(operationContext())
                       ->commitChunksMerge(operationContext(),
                                           NamespaceString("TestDB.NonExistingColl"),
@@ -441,8 +454,7 @@ TEST_F(MergeChunkTest, NonExistingNamespace) {
                                           collTimestamp,
                                           collUuidAtRequest,
                                           rangeToBeMerged,
-                                          _shardId,
-                                          validAfter),
+                                          _shardId),
                   DBException);
 }
 
@@ -461,6 +473,10 @@ TEST_F(MergeChunkTest, NonMatchingUUIDsOfChunkAndRequestErrors) {
     // Construct chunk to be merged
     auto chunk2(chunk);
 
+    // set histories
+    chunk.setHistory({ChunkHistory{Timestamp{100, 0}, _shardId}});
+    chunk2.setHistory({ChunkHistory{Timestamp{200, 0}, _shardId}});
+
     auto chunkMin = BSON("a" << 1);
     auto chunkBound = BSON("a" << 5);
     auto chunkMax = BSON("a" << 10);
@@ -475,8 +491,6 @@ TEST_F(MergeChunkTest, NonMatchingUUIDsOfChunkAndRequestErrors) {
 
     setupCollection(_nss1, _keyPattern, {chunk, chunk2});
 
-    Timestamp validAfter{1};
-
     auto mergeStatus = ShardingCatalogManager::get(operationContext())
                            ->commitChunksMerge(operationContext(),
                                                _nss1,
@@ -484,8 +498,7 @@ TEST_F(MergeChunkTest, NonMatchingUUIDsOfChunkAndRequestErrors) {
                                                collTimestamp,
                                                requestUuid,
                                                rangeToBeMerged,
-                                               _shardId,
-                                               validAfter);
+                                               _shardId);
     ASSERT_EQ(ErrorCodes::InvalidUUID, mergeStatus.getStatus());
 }
 
@@ -509,11 +522,10 @@ TEST_F(MergeChunkTest, MergeAlreadyHappenedSucceeds) {
     mergedChunk.setName(OID::gen());
     mergedChunk.setCollectionUUID(collUuid);
     mergedChunk.setShard(_shardId);
+    mergedChunk.setHistory({ChunkHistory{Timestamp{100, 0}, _shardId}});
 
 
     setupCollection(_nss1, _keyPattern, {mergedChunk});
-
-    Timestamp validAfter{1};
 
     uassertStatusOK(ShardingCatalogManager::get(operationContext())
                         ->commitChunksMerge(operationContext(),
@@ -522,8 +534,7 @@ TEST_F(MergeChunkTest, MergeAlreadyHappenedSucceeds) {
                                             collTimestamp,
                                             collUuid,
                                             rangeToBeMerged,
-                                            _shardId,
-                                            validAfter));
+                                            _shardId));
 
     // Verify that no change to config.chunks happened.
     const auto query = BSON(ChunkType::collectionUUID() << collUuid);
@@ -570,6 +581,11 @@ TEST_F(MergeChunkTest, MergingChunksWithDollarPrefixShouldSucceed) {
     auto chunkBound2 = BSON("a" << BSON("$mixKey" << 1));
     auto chunkMax = BSON("a" << kMaxBSONKey);
 
+    // set histories
+    chunk1.setHistory({ChunkHistory{Timestamp{100, 9}, _shardId}});
+    chunk2.setHistory({ChunkHistory{Timestamp{200, 5}, _shardId}});
+    chunk3.setHistory({ChunkHistory{Timestamp{156, 1}, _shardId}});
+
     // first chunk boundaries
     chunk1.setMin(chunkMin);
     chunk1.setMax(chunkBound1);
@@ -584,7 +600,6 @@ TEST_F(MergeChunkTest, MergingChunksWithDollarPrefixShouldSucceed) {
 
     // Record chunk boundaries for passing into commitChunksMerge
     ChunkRange rangeToBeMerged(chunk1.getMin(), chunk3.getMax());
-    Timestamp validAfter{100, 0};
 
     uassertStatusOK(ShardingCatalogManager::get(operationContext())
                         ->commitChunksMerge(operationContext(),
@@ -593,8 +608,7 @@ TEST_F(MergeChunkTest, MergingChunksWithDollarPrefixShouldSucceed) {
                                             collTimestamp,
                                             collUuid,
                                             rangeToBeMerged,
-                                            _shardId,
-                                            validAfter));
+                                            _shardId));
 
     const auto query = BSON(ChunkType::collectionUUID() << collUuid);
     auto findResponse = uassertStatusOK(
@@ -625,7 +639,8 @@ TEST_F(MergeChunkTest, MergingChunksWithDollarPrefixShouldSucceed) {
 
     // Make sure history is there
     ASSERT_EQ(1UL, mergedChunk.getHistory().size());
-    ASSERT_EQ(validAfter, mergedChunk.getHistory().front().getValidAfter());
+    ASSERT_EQ(chunk2.getHistory().front().getValidAfter(),
+              mergedChunk.getHistory().front().getValidAfter());
 }
 
 }  // namespace
